--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -436,7 +436,7 @@
     },
     "bing": {
         "api_key": "62ca8030261f4889b9a48520dfe36b63",
-        "format": "format": ""riff-16khz-16bit-mono-pcm",
+        "format": "riff-16khz-16bit-mono-pcm",
         "gender": "male"
     },
     "ibm": {
