--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -79,8 +79,8 @@
   // General skill values
   // Override: none
   "skills": {
-    // Directory to look for user skills
-    "directory": "~/.mycroft/skills",
+    // Directory to look for skills
+    "directory": "default",
     // TODO: Old unused kludge, remove from code
     "stop_threshold": 2.0,
     // blacklisted skills to not load
