msm default skills

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -86,7 +86,16 @@
     // blacklisted skills to not load
     "blacklisted_skills": ["skill-media", "send_sms", "skill-wolfram-alpha"],
     // priority skills to be loaded first
-    "priority_skills": ["skill-pairing"]
+    "priority_skills": ["skill-pairing"],
+    // skills msm considers default and auto-installs
+    "msm_skills":
+        ["skill-alarm", "skill-audio-record", "skill-date-time",
+        "skill-desktop-launcher", "skill-ip", "skill-joke",
+        "skill-hello-world", "skill-media", "skill-naptime",
+        "skill-personal", "skill-playback-control", "skill-reminder",
+        "skill-installer", "skill-singing", "skill-speak",
+        "skill-spelling", "skill-stop", "skill-stock", "skill-volume"
+        ]
   },
   
   // Address of the REMOTE server
