--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -155,6 +155,16 @@
         "service_objectives", "LILACS_storage", "LILACS_core",
         "skill_playback_control", "skill_display_control"],
 
+    // skills msm considers default and auto-installs
+    "msm_skills":
+        ["skill-alarm", "skill-audio-record", "skill-date-time",
+        "skill-desktop-launcher", "skill-ip", "skill-joke",
+        "skill-hello-world", "skill-media", "skill-naptime",
+        "skill-personal", "skill-playback-control", "skill-reminder",
+        "skill-installer", "skill-singing", "skill-speak",
+        "skill-spelling", "skill-stop", "skill-stock", "skill-volume"
+        ],
+
     // fallback override, ignore user settings and use this order
     "fallback_override": true,
 
